# investment-bot

./: README.md  pyproject.toml
api-gateway/: Dockerfile  pyproject.toml
api-gateway/app/: config.py  main.py
investment-news-service/: Dockerfile  pyproject.toml
investment-news-service/app/: config.py  example_news_strategy.py  main.py  strategy.py
telegram-bot/: Dockerfile  pyproject.toml
telegram-bot/app/: config.py  handlers.py  main.py
ticker-service/: Dockerfile  pyproject.toml
ticker-service/app/: config.py  main.py  strategy.py  yfinance_strategy.py
