[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = ""
authors = ["Tigran Saatchyan <mr.saatchyan@yandex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
