[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Tigran Saatchyan <mr.saatchyan@yandex.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
