[tool.poetry]
name = "ticker-service"
version = "0.1.0"
description = ""
authors = ["Tigran Saatchyan <mr.saatchyan@yandex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
yfinance = "^0.2.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
